# LiGa-Splat

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: color_registration.cfg  config.cfg  config_test.cfg  launch_config.cfg  launch_config_test.cfg
launch/: accumulator_launch.py  data_saver_launch.py  record_bag_launch.py
rviz/: pointcloud.rviz
shell_scripts/: full_pipeline.sh
src/: accumulator.cpp  global_processor.cpp  image_saver.cpp  odom_saver.cpp  path_publisher.cpp
utils/: colmap_export.cpp  color_reconstruction.cpp  color_registration.cpp  depth_renderer.cpp  export_colmap.cpp  pcd_viewer.cpp  pose_estimator.cpp  pose_viewer.cpp  prepare_depth_for_3dgs.cpp  reconstruction.cpp  registration.cpp
