<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>liga_splat</name>
  <version>0.0.0</version>
  <description>LiGa Splat — LiDAR-Guided 3D Gaussian Splatting pipeline</description>
  <maintainer email="202004778@post.au.dk">Jonathan Nielsen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>PCL</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp_components</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>Eigen3</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>libpcl-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
